--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -184,7 +184,7 @@
                                                                                                     <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                                                                 </tableHeaderCell>
                                                                                                 <textFieldCell key="dataCell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" title="Text Cell" id="989-xe-B7D" customClass="LanguageCell">
-                                                                                                    <font key="font" metaFont="system"/>
+                                                                                                    <font key="font" metaFont="systemThin" size="13"/>
                                                                                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                                                 </textFieldCell>
@@ -382,7 +382,7 @@
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <animations/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                            <size key="minSize" width="488" height="74"/>
+                                                            <size key="minSize" width="458" height="74"/>
                                                             <size key="maxSize" width="524" height="10000000"/>
                                                             <attributedString key="textStorage">
                                                                 <fragment content="Sample text">
@@ -393,7 +393,7 @@
                                                                 </fragment>
                                                             </attributedString>
                                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                            <size key="minSize" width="488" height="74"/>
+                                                            <size key="minSize" width="458" height="74"/>
                                                             <size key="maxSize" width="524" height="10000000"/>
                                                         </textView>
                                                     </subviews>
